--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi error esse, architecto deserunt vel optio minus reprehenderit pariatur, debitis accusantium adipisci amet maxime numquam eveniet culpa eaque alias atque non!</p>
+        </div>
+        <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi error esse, architecto deserunt vel optio minus reprehenderit pariatur, debitis accusantium adipisci amet maxime numquam eveniet culpa eaque alias atque non!</p>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
