--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <div id="content"></div>
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
-        .then(response => response.text())
+        .then(response => response.JSON())
         .then(data => {
             document.getElementById("content").innerHTML = data;
-        })
+        });
     </script>
 </body>
+
 </html>
