--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="content"></div>
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
-        .then(response => response.json())
+        .then(response => response.text())
         .then(data => {
             document.getElementById("content").innerHTML = data.people;
         });
