--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div id="content"></div>
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
-        .then(response => response.text())
+        .then(response => response.json())
         .then(data => {
-            document.getElementById("content").innerHTML = data.people;
+            document.getElementById("content").innerHTML = data.planets;
         });
     </script>
 </body>
